--- a/practise1.html
+++ b/practise1.html
@@ -5,14 +5,16 @@
     <meta http-equiv="X-UA-Compatible"content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>spotify - your favourite music is here </title>
+    <link rel="stylesheet" href="style.css">
  </head>
  <body>
     <nav>
         <ul>
-            <li class="brand"><img src="logo.png" alt="spotify">></li>
+            <li class="brand"><img src="logo.png" alt="spotify">>spotify</li>
             <li>Home </li>
             <li>about</li>
         </ul>
     </nav>
+    <script scr= "script.js"></script>
  </body>
  </html>
