macking project with html,css,javascript

--- a/practise1.html
+++ b/practise1.html
@@ -15,6 +15,18 @@
             <li>about</li>
         </ul>
     </nav>
+    <div class="container">
+        <h1>
+            best of NCS - no copy right sounds
+        </h1>
+        <div class ="songlist"></div>
+        <div class ="songbanner"></div>
+        <div></div>
+    </div>
+
+    <div class ="bottom">
+        <input type="range" name="range" id="my progress bar" min="0" max="100">
+    </div>
     <script scr= "script.js"></script>
  </body>
  </html>
