macking project with html,css,javascript

--- a/practise1.html
+++ b/practise1.html
@@ -26,7 +26,21 @@
 
     <div class ="bottom">
         <input type="range" name="range" id="my progress bar" min="0" max="100">
+        <div calls ="icons">
+            <!-- font awesome icons -->
+        </div>
     </div>
     <script scr= "script.js"></script>
  </body>
  </html>
+
+         header, footer {
+            background-color: #333;
+            color: white;
+            padding: 10px;
+        }
+        main {
+            background-color: white;
+            padding: 20px;
+            margin-top: 10px;
+        }
