--- a/practie.html
+++ b/practie.html
@@ -28,3 +28,16 @@
 
 </body>
 </html>
+
+     
+        header, footer {
+            background-color: #333;
+            color: white;
+            padding: 10px 20px;
+        }
+        main {
+            margin-top: 20px;
+        }
+    </style>
+</head>
+<body>
