--- a/practise1.html
+++ b/practise1.html
@@ -16,31 +16,17 @@
         </ul>
     </nav>
     <div class="container">
-        <h1>
-            best of NCS - no copy right sounds
-        </h1>
-        <div class ="songlist"></div>
-        <div class ="songbanner"></div>
-        <div></div>
+    <h1>
+        best of NCS Copyright Sound
+    </h1>
+    <div class="song list" ></div>
+    <div class="songBanner"></div>
     </div>
-
-    <div class ="bottom">
-        <input type="range" name="range" id="my progress bar" min="0" max="100">
-        <div calls ="icons">
-            <!-- font awesome icons -->
-        </div>
+    <div class="bottom">
+        <input type="range" name="range" id="my progress bar" main="0" max="100">
     </div>
     <script scr= "script.js"></script>
  </body>
  </html>
 
-         header, footer {
-            background-color: #333;
-            color: white;
-            padding: 10px;
-        }
-        main {
-            background-color: white;
-            padding: 20px;
-            margin-top: 10px;
-        }
+ 
