--- a/practise1.html
+++ b/practise1.html
@@ -24,6 +24,10 @@
     </div>
     <div class="bottom">
         <input type="range" name="range" id="my progress bar" main="0" max="100">
+        <div class="icons">
+            <!-- font awesome icons -->
+        </div>
+ 
     </div>
     <script scr= "script.js"></script>
  </body>
