macking project with html,css,javascript

--- a/practie.html
+++ b/practie.html
@@ -41,3 +41,16 @@
     </style>
 </head>
 <body>
+
+    * {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+/* Body styling */
+body {
+  font-family: Arial, sans-serif;
+  background-color: #f4f4f4;
+  color: #333;
+}
