macking project with html,css,javascript

--- a/practie.html
+++ b/practie.html
@@ -54,3 +54,17 @@ body {
   background-color: #f4f4f4;
   color: #333;
 }
+
+header {
+  background-color: #333;
+  color: white;
+  padding: 20px;
+  text-align: center;
+}
+
+/* Navigation */
+nav {
+  background-color: #444;
+  padding: 10px;
+  text-align: center;
+}
