macking project with html,css,javascript

--- a/practie.html
+++ b/practie.html
@@ -67,4 +67,23 @@ nav {
   background-color: #444;
   padding: 10px;
   text-align: center;
-}
+<p>
+    Nature encompasses all the natural world, both living and non-living, and is the foundation of life on Earth. It provides essential resources like oxygen, water, and food, and sustains diverse ecosystems. Humans have a strong connection to nature, both for survival and for inspiration and beauty. However, human activities like deforestation and pollution pose significant threats to nature, requiring conservation efforts to protect it for future generations. 
+Paragraph on Nature in 150 Words - BYJU'S
+Nature is the ultimate source of our living. Both living and non-living things include nature, and everyone is interdependent, whi...
+
+BYJU'S
+
+Long and Short Paragraph on Nature - Infinity Learn
+Nature is the creation of natural material and physical world on earth independent of the human activities. The beauty and richnes...
+
+Infinity Learn
+
+Nature Essay for Students and Children | 500+ Words Essay
+Significance of Nature Nature has been in existence long before humans and ever since it has taken care of mankind and nourished i...
+
+toppr.com
+
+Show all
+
+</p>
