macking project with html,css,javascript

--- a/practie.html
+++ b/practie.html
@@ -100,3 +100,21 @@ Show all
             margin: 0;
             padding: 0;
         }
+           
+        
+    header {
+            background-color: #0077cc;
+            color: white;
+            padding: 1em;
+            text-align: center;
+        }
+        nav {
+            background-color: #005fa3;
+            padding: 0.5em;
+            text-align: center;
+        }
+        nav a {
+            color: white;
+            margin: 0 15px;
+            text-decoration: none;
+        }
