--- a/practise1.html
+++ b/practise1.html
@@ -16,16 +16,22 @@
         </ul>
     </nav>
     <div class="container">
-    <h1>
+        <div class="song list" ></div>
+        
+        <h1>
         best of NCS Copyright Sound
-    </h1>
-    <div class="song list" ></div>
+        </h1>
+    <div>
     <div class="songBanner"></div>
     </div>
     <div class="bottom">
         <input type="range" name="range" id="my progress bar" main="0" max="100">
         <div class="icons">
             <!-- font awesome icons -->
+            <i class="fas fa-3x fa-step-backward-circle"></i>
+            <i class="far fa-3x fa-play-circle"></i>
+            <i class="fas fa-3x fa-step-forward-circle"></i>
+            
         </div>
  
     </div>
