--- a/practise1.html
+++ b/practise1.html
@@ -25,7 +25,7 @@
     <div class="songBanner"></div>
     </div>
     <div class="bottom">
-        <input type="range" name="range" id="my progress bar" main="0" max="100">
+        <input type="range" name="range" id="myprogressbar" main="0" max="100">
         <div class="icons">
             <!-- font awesome icons -->
             <i class="fas fa-3x fa-step-backward-circle"></i>
@@ -35,7 +35,8 @@
         </div>
  
     </div>
-    <script scr= "script.js"></script>
+    <script src= "script.js"></script>
+    <script src="http://kit.fontawesome.com/26504e4a1f.js"crossorigin></script>
  </body>
  </html>
 
