macking project with html,css,javascript

--- a/practise1.html
+++ b/practise1.html
@@ -21,6 +21,12 @@
         <h1>
         best of NCS Copyright Sound
         </h1>
+        <div>
+            <div class="songitem"></div>
+            <img src="cover1.jpd" alt="1">
+            <span>let me love you</span>
+            <span class="songlistplay "><span>05:34</span><i class="far  fa-play-circle"></i></span>
+        </div>
     <div>
     <div class="songBanner"></div>
     </div>
