macking project with html,css,javascript

--- a/practie.html
+++ b/practie.html
@@ -118,3 +118,16 @@ Show all
             margin: 0 15px;
             text-decoration: none;
         }
+
+        
+    <main>
+        <h2>Home Page</h2>
+        <p>This is a simple website created using HTML and CSS. You can customize this template to build your own web pages.</p>
+    </main>
+
+    <footer>
+        <p>&copy; 2025 My Simple Website</p>
+    </footer>
+
+</body>
+</html>
