--- a/practie.html
+++ b/practie.html
@@ -131,3 +131,14 @@ Show all
 
 </body>
 </html>
+
+   <header>
+        <h1>Welcome to My Website</h1>
+    </header>
+
+    <nav>
+        <a href="#">Home</a>
+        <a href="#">About</a>
+        <a href="#">Services</a>
+        <a href="#">Contact</a>
+    </nav>
