macking project with html,css,javascript

--- a/practie.html
+++ b/practie.html
@@ -142,3 +142,20 @@ Show all
         <a href="#">Services</a>
         <a href="#">Contact</a>
     </nav>
+         nav a {
+            color: white;
+            margin: 0 15px;
+            text-decoration: none;
+        }
+        main {
+            padding: 2em;
+        }
+        footer {
+            background-color: #ddd;
+            text-align: center;
+            padding: 1em;
+            margin-top: 2em;
+        }
+    </style>
+</head>
+<body>
