--- a/practie.html
+++ b/practie.html
@@ -159,3 +159,15 @@ Show all
     </style>
 </head>
 <body>
+
+         header {
+            background-color: #0077cc;
+            color: white;
+            padding: 1em;
+            text-align: center;
+        }
+        nav {
+            background-color: #005fa3;
+            padding: 0.5em;
+            text-align: center;
+        }
