macking project with html,css,javascript

--- a/practise1.html
+++ b/practise1.html
@@ -1,19 +1,7 @@
  <!DOCTYPE html>
  <html lang="en">
  <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible"content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>spotify - your favourite music is here </title>
-    <link rel="stylesheet" href="style.css">
- </head>
- <body>
-    <nav>
-        <ul>
-            <li class="brand"><img src="logo.png" alt="spotify">>spotify</li>
-            <li>Home </li>
-            <li>about</li>
-        </ul>
+    
     </nav>
     <div class="container">
         <div class="song list" ></div>
@@ -25,7 +13,7 @@
             <div class="songitem"></div>
             <img src="cover1.jpd" alt="1">
             <span>let me love you</span>
-            <span class="songlistplay "><span>05:34</span><i class="far  fa-play-circle"></i></span>
+            <span class="songlistplay "><span class="timestap">05:34</span><i class="far  fa-play-circle"></i></span>
         </div>
     <div>
     <div class="songBanner"></div>
@@ -47,3 +35,16 @@
  </html>
 
  
+ meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible"content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>spotify - your favourite music is here </title>
+    <link rel="stylesheet" href="style.css">
+ </head>
+ <body>
+    <nav>
+        <ul>
+            <li class="brand"><img src="logo.png" alt="spotify">>spotify</li>
+            <li>Home </li>
+            <li>about</li>
+        </ul>
