macking project with html,css,javascript

--- a/web.html
+++ b/web.html
@@ -8,7 +8,13 @@
 </head>
 <body>
     <div class="container">
-        <div class="content"></div>
+        <div class="content">
+            <section class="top_section">
+                <div calss="image_container">
+                    <img src="pic_1534757648" alt="Tribute"/>
+                </div>
+            </section>
+        </div>
     </div>
 </body>
 </html>
