macking project with html,css,javascript

--- a/web.html
+++ b/web.html
@@ -11,7 +11,7 @@
         <div class="content">
             <section class="top_section">
                 <div calss="image_container">
-                    <img src="pic_1534757648" alt="Tribute"/>
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSPb4n2fipvyrgd0Bq0dM_HVCdTexTpjiRVsA&s" alt="Tribute"/>
                 </div>
             </section>
         </div>
