macking project with html,css,javascript

--- a/web.html
+++ b/web.html
@@ -11,7 +11,15 @@
         <div class="content">
             <section class="top_section">
                 <div calss="image_container">
-                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSPb4n2fipvyrgd0Bq0dM_HVCdTexTpjiRVsA&s" alt="Tribute"/>
+                    <img src="https://i.tribune.com.pk/media/images/385601-AQKhanEPA-1338235853/385601-AQKhanEPA-1338235853-640x480.webp" alt="Tribute"/>
+                </div>
+                <div>
+                    <h1>
+                        doctor A.Q.Khan
+                    </h1>
+                    <h4>
+                        (April 1,1936_October 10,2021)
+                    </h4>
                 </div>
             </section>
         </div>
