make project with html,css,java script

--- a/web.html
+++ b/web.html
@@ -24,7 +24,8 @@
             </section>
             <section class ="about_section">
                 <h2> Pakistan's Real Hero & nulcear</h2>
-                <p>Dr. Abdul Qadeer Khan (A.Q. Khan) was a Pakistani scientist and metallurgical engineer known for his pivotal role in Pakistan's nuclear program. He is often credited as the "father of Pakistan's nuclear bomb" and is considered a hero in Pakistan. However, he is also a controversial figure, with some viewing him as a nuclear proliferator for his role in helping other nations develop their own nuclear weapons programs. 
+                <p>
+                    <b>Dr. Abdul Qadeer Khan (A.Q. Khan) </b> was a Pakistani scientist and metallurgical engineer known for his pivotal role in Pakistan's nuclear program.He is often credited as the "father of Pakistan's nuclear bomb" and is considered a hero in Pakistan. However, he is also a controversial figure, with some viewing him as a nuclear proliferator for his role in helping other nations develop their own nuclear weapons programs. 
                     Abdul Qadeer Khan | Biography, Nuclear Weapons, & Facts
                     28-Mar-2025 — Khan's critics, particularly in the West, expressed dismay at such lenient treatment of a man whom one observer called ...
                     
@@ -39,7 +40,23 @@
                     Simple Wikipedia
                     
                     Show all
+
 </p>
+            </section>
+            <section class="Biography_section">
+                <h3>
+                    biographies
+                </h3>
+                <ul>
+                    <li>
+                        Dr. Abdul Qadeer Khan: This is the proper way to refer to him, as a respected scientist.
+                        "father of Pakistan's nuclear program": This is his most well-known nickname, indicating his crucial role in Pakistan's nuclear weapons development.
+                        Pakistani scientist and metallurgical engineer: This accurately describes his professional background. 
+                        Nation should be rest assured Pakistan is a safe atomic power
+                        Khan immigrated to West Pakistan in 1952, and in 1960 he graduated from the University of Karachi with a degree in metallurgy
+
+                    </li>
+                </ul>
             </section>
         </div>
     </div>
