make project with html,css,java script

--- a/web.html
+++ b/web.html
@@ -58,6 +58,11 @@
                     </li>
                 </ul>
             </section>
+            <footer>
+                <p>
+                Read more about dr A.Q Khan on <a href="https://en.wikipedia.org/wiki/Abdul_Qadeer_Khan"> Wikipedia</a>
+                </p>
+            </footer>
         </div>
     </div>
 </body>
