--- a/web.html
+++ b/web.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Tribute Website | A.Q. Khan</title>
-    <link rel="stylesheet" href="web.css">
+    <link rel="stylesheet" href="website.css">
 </head>
 <body>
     <div class="container">
