--- a/job_application.html
+++ b/job_application.html
@@ -7,5 +7,10 @@
     <link rel="stylesheet" href="job_application.css"/>
 </head>
 <body>
+    <div class="container">
+
+        <div class="apply_box"></div>
+
+    </div>
 </body>
 </html>
