--- a/job_application.html
+++ b/job_application.html
@@ -9,8 +9,19 @@
 <body>
     <div class="container">
 
-        <div class="apply_box"></div>
-
+        <div class="apply_box">
+            <h1>job Application 
+                <span class="title_small">(Web)</span>
+            </h1>
+            <form action="">
+                <div class="form_comtainer">
+                    <div class="form_control">
+                        <label for="">frist name</label>
+                        <input id="first_name"> name="first_name" placeholder="Enter first Name"/>
+                    </div>
+                </div>           
+            </form>
+        </div>
     </div>
 </body>
 </html>
