make project with html,css,java script

--- a/job_application.html
+++ b/job_application.html
@@ -16,8 +16,20 @@
             <form action="">
                 <div class="form_comtainer">
                     <div class="form_control">
-                        <label for="">frist name</label>
-                        <input id="first_name"> name="first_name" placeholder="Enter first Name"/>
+                        <label for="First_name">frist Name</label>
+                        <input 
+                        id="first_name"
+                        name="first_name"
+                        placeholder="Enter first Name..."
+                        />
+                    </div>
+                    <div class="form_control">
+                        <label for="Last_name">Last Name</label>
+                        <input 
+                        id="first_name"
+                        name="first_name"
+                        placeholder="Enter first Name..."
+                        />
                     </div>
                 </div>           
             </form>
