make project with html,css,java script

--- a/practise1.html
+++ b/practise1.html
@@ -53,3 +53,31 @@
     <title>spotify - your favourite music is here </title>
     <link rel="stylesheet" href="style.css">
  </head>
+
+ 
+</p>
+            </section>
+            <section class="Biography_section">
+                <h3>
+                    biographies
+                </h3>
+                <ul>
+                    <li>
+                        Dr. Abdul Qadeer Khan: This is the proper way to refer to him, as a respected scientist.
+                        "father of Pakistan's nuclear program": This is his most well-known nickname, indicating his crucial role in Pakistan's nuclear weapons development.
+                        Pakistani scientist and metallurgical engineer: This accurately describes his professional background. 
+                        Nation should be rest assured Pakistan is a safe atomic power
+                        Khan immigrated to West Pakistan in 1952, and in 1960 he graduated from the University of Karachi with a degree in metallurgy
+
+                    </li>
+                </ul>
+            </section>
+            <footer>
+                <p>
+                Read more about dr A.Q Khan on <a href="https://en.wikipedia.org/wiki/Abdul_Qadeer_Khan"> Wikipedia</a>
+                </p>
+            </footer>
+        </div>
+    </div>
+</body>
+</html>
