--- a/web.html
+++ b/web.html
@@ -85,3 +85,19 @@
                         (April 1,1936_October 10,2021)
                     </h4>
                 </div>
+
+
+                     </h3>
+                <ul>
+                    <li>
+                        Dr. Abdul Qadeer Khan: This is the proper way to refer to him, as a respected scientist.
+                        "father of Pakistan's nuclear program": This is his most well-known nickname, indicating his crucial role in Pakistan's nuclear weapons development.
+                        Pakistani scientist and metallurgical engineer: This accurately describes his professional background. 
+                        Nation should be rest assured Pakistan is a safe atomic power
+                        Khan immigrated to West Pakistan in 1952, and in 1960 he graduated from the University of Karachi with a degree in metallurgy
+
+                    </li>
+                </ul>
+            </section>
+            <footer>
+                <p>
