make project with html,css,java script

--- a/job_application.html
+++ b/job_application.html
@@ -31,6 +31,14 @@
                         placeholder="Enter first Name..."
                         />
                     </div>
+                        <div class="form_control">
+                        <label for="email">Last Name</label>
+                        <input type="email"
+                        id="email"
+                        name="email"
+                        placeholder="Enter email..."
+                        />
+                    </div>
                 </div>           
             </form>
         </div>
