make project with html,css,java script

--- a/job_application.html
+++ b/job_application.html
@@ -39,6 +39,17 @@
                         placeholder="Enter email..."
                         />
                     </div>
+                        <div class="form_control">
+                        <label for="job_role">Last Name</label>
+                        <select>
+                            <option value="">Select Job Role</option>
+                            <option value="frontend">Foranted Developer</option>
+                            <option value="backend">Backend Developer</option>
+                            <option value="full_stuck">full Stuck Developer</option>
+                            <option value="ui_ux">UI UX Designer</option>
+
+                        </select>
+                    </div>
                 </div>           
             </form>
         </div>
