make project with html,css,java script

--- a/job_application.html
+++ b/job_application.html
@@ -60,7 +60,15 @@
                         cols="50"
                         placeholder="Enter Address">
                         </textarea>
-                    </div> 
+                    </div>
+                    <div class="form_control">
+                        <label for="city">city</label>
+                        <input 
+                        id="city"
+                        name="city"
+                        placeholder="Enter city name..."
+                        />
+                    </div>
                 </div>        
             </form>
         </div>
