--- a/job_application.html
+++ b/job_application.html
@@ -69,8 +69,26 @@
                         placeholder="Enter city name..."
                         />
                     </div>
+                    <div class="form_control">
+                        <label for="pincode">Pincode</label>
+                        <input 
+                        type="number"
+                        id="pincode"
+                        name="pincode"
+                        placeholder="Enter pincode name..."
+                        />
+                    </div>
+                    <div class="form_control">
+                        <label for="date">Date</label>
+                        <input 
+                        value="2022-01-14"
+                        type="date"
+                        id="date"
+                        name="date"
+                        />
+                    </div>
+                    
                 </div>        
-            </form>
         </div>
     </div>
 </body>
