make project with html,css,java script

--- a/job_application.html
+++ b/job_application.html
@@ -87,9 +87,21 @@
                         name="date"
                         />
                     </div>
+                    <div class="form_control">
+                        <label for="upload">Upload ypur cv</label>
+                        <input 
+                        type="file"
+                        id="upload"
+                        name="upload"
+                        />
+                    </div>
+                    
                     
                 </div>        
-        </div>
+                <div class="button_container">
+                    <button type="submit">Apply Now</button>
+                </div>
+            </div>
     </div>
 </body>
 </html>
