--- a/web.html
+++ b/web.html
@@ -101,3 +101,23 @@
             </section>
             <footer>
                 <p>
+        
+
+                      </div>
+                    <div class="form_control">
+                        <label for="date">Date</label>
+                        <input 
+                        value="2022-01-14"
+                        type="date"
+                        id="date"
+                        name="date"
+                        />
+                    </div>
+                    <div class="form_control">
+                        <label for="upload">Upload ypur cv</label>
+                        <input 
+                        type="file"
+                        id="upload"
+                        name="upload"
+                        />
+                    </div>
