--- a/job_application.html
+++ b/job_application.html
@@ -51,7 +51,7 @@
 
                         </select>
                     </div>
-                        <div class="form_control">
+                        <div class="textarea_control">
                         <label for="Adress">Adress</label>
                         <textarea 
                         id="Adress" 
