--- a/web.html
+++ b/web.html
@@ -121,3 +121,24 @@
                         name="upload"
                         />
                     </div>
+
+
+
+                    <div class="form_control">
+                        <label for="upload">Upload ypur cv</label>
+                        <input 
+                        type="file"
+                        id="upload"
+                        name="upload"
+                        />
+                    </div>
+                    
+                    
+                </div>        
+                <div class="button_container">
+                    <button type="submit">Apply Now</button> 
+                </div>
+            </div>
+    </div>
+</body>
+</html>
