--- a/practise1.html
+++ b/practise1.html
@@ -122,3 +122,25 @@
                     Show all
 
 
+
+
+                            </div>
+ 
+        </body>
+ </html>
+
+ 
+ meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible"content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>spotify - your favourite music is here </title>
+    <link rel="stylesheet" href="style.css">
+ </head>
+
+
+  <nav>
+        <ul>
+            <li class="brand"><img src="logo.png" alt="spotify">>spotify</li>
+            <li>Home </li>
+            <li>about</li>
+        </ul>
